# native-kt

./: README.md  build.gradle.kts  gradle.properties  libs.versions.toml  mkdocs.yml  settings.gradle.kts  zensical.toml
.github/workflows/: docs.yml
benchmarks/: build.gradle.kts
benchmarks/natives/foreignBindings/: api.ndl
benchmarks/natives/foreignBindings/include/: api.h
benchmarks/natives/foreignBindings/src/: bindings.c
benchmarks/natives/jniBindings/: api.ndl
benchmarks/natives/jniBindings/include/: api.h
benchmarks/natives/jvmciBindings/: CMakeLists.txt  api.ndl
benchmarks/natives/jvmciBindings/include/: api.h
benchmarks/natives/jvmciBindings/src/: bindings.c
benchmarks/src/nativeInterop/foreignBindings/: CMakeLists.txt  api.h  api.idl  bindings.c
benchmarks/src/nativeInterop/jniBindings/: CMakeLists.txt  api.h  api.idl  bindings.c
docs/: _config.yml  basics.md  gradle.md  internals.md
example-glfw/: build.gradle.kts
example-glfw/natives/glfwBindings/: CMakeLists.txt
examples/glfw/: build.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
native-kt-gradle-plugin/: build.gradle.kts  settings.gradle.kts
native-kt-intellij-plugin/: build.gradle.kts
native-kt-plugin/: settings.gradle.kts
native-kt-runtime/: build.gradle.kts
native-kt-runtime-jvm/: build.gradle.kts
plugin/: build.gradle.kts  settings.gradle.kts
runtime/: build.gradle.kts
test/: build.gradle.kts
test-glfw/: build.gradle.kts
test/natives/test/: CMakeLists.txt  api.idl
tests/: build.gradle.kts
tests/natives/test/: api.ndl
(+149 files in other folders)
